app/src/main/java/com/example/bookclub/errors/StudySizeFullException.java
package com.example.bookclub.errors;

public class StudySizeFullException extends RuntimeException {
    public StudySizeFullException() {
        super("Study size is full");
    }
}
